@@ -275,17 +275,6 @@ def sanitize_text_for_comment(text):
     return text
 
 
-def discard_node(node):
-    """Discard the DOM 'node'.
-
-    'node' -- The node to discard.
-
-    In general, DOM nodes can contain circular data structures.  Python
-    versions before Python 2.0 could not collect such data structures,
-    so we must manually break the cycles."""
-
-    xml.dom.ext.ReleaseNode(node)
-
 ########################################################################
 # Local Variables:
 # mode: python
